# argus

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: Dockerfile  Dockerfile.gpu  Dockerfile.sam3  Dockerfile.siglip  README.md  mypy.ini  pyproject.toml  ruff.toml
backend/app/: __init__.py  celery.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py  storage.py  supabase.py
backend/app/crud/: __init__.py  annotation.py  frame.py  import_job.py  label.py  project.py  video.py
backend/app/ml/: __init__.py
backend/app/models/: __init__.py  annotation.py  base.py  frame.py  import_job.py  label.py  project.py  user.py  video.py
backend/app/tasks/: __init__.py  auto_annotation.py  embedding_extraction.py  frame_extraction.py  import_dataset.py
backend/scripts/: verify_gpu.py
backend/tests/: __init__.py  conftest.py  test_sample.py
backend/tests/test_api/: test_annotations.py  test_auto_annotation.py  test_deps.py  test_export.py  test_frames.py  test_labels.py  test_projects.py  test_search.py  test_videos.py
backend/tests/test_core/: test_config.py  test_security.py  test_storage.py
backend/tests/test_crud/: __init__.py  test_annotation_review.py  test_frame.py  test_label.py  test_project.py  test_video.py
backend/tests/test_ml/: test_sam3.py  test_siglip.py
backend/tests/test_models/: test_annotation.py  test_base.py  test_frame.py  test_label.py  test_project.py  test_user.py  test_video.py
backend/tests/test_services/: test_export_coco.py  test_export_yolo.py
backend/tests/test_tasks/: test_auto_annotation.py  (+2 more)
(+188 files in other folders)
